# qhidapi

./: CMakeLists.txt  hidapi.h  qhidapi.cpp  qhidapi.h  qhidapi_global.h  qhidapi_p.cpp  qhidapi_p.h  qhiddeviceinfo.h  qhiddeviceinfomodel.cpp  qhiddeviceinfomodel.h  qhiddeviceinfoview.cpp  qhiddeviceinfoview.h
linux/: hid.c
